--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- scripts -->
     <script type="text/javascript" src="js/logic.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.2.js"></script>
-    <!-- <script type="text/javascript" src="js/ui.js"></script> -->
+    <script type="text/javascript" src="js/ui.js"></script>
 
 
   </head>
@@ -24,21 +24,21 @@
 
 
       <div class="row1">
+        <div class="square" id=0></div>
         <div class="square" id=1></div>
         <div class="square" id=2></div>
-        <div class="square" id=3></div>
       </div>
 
       <div class="row2">
+        <div class="square" id=3></div>
         <div class="square" id=4></div>
         <div class="square" id=5></div>
-        <div class="square" id=6></div>
       </div>
 
       <div class="row3">
+        <div class="square" id=6></div>
         <div class="square" id=7></div>
         <div class="square" id=8></div>
-        <div class="square" id=9></div>
       </div>
 
 
