--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="container">
       <h1>Tic Tac Toe</h1>
 
+
       <p>'X' to go first. Good luck.</p>
 
 
@@ -41,6 +42,8 @@
         <div class="square" id=8></div>
       </div>
 
+      <div id="winStatement"></div>
+      <button id="reset">Reset Game</button>
 
     </div> <!-- div container -->
 
