--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <h1>Tic Tac Toe</h1>
 
 
-      <p>'X' to go first. Good luck.</p>
+      <p>'X'  goes first. Good luck.</p>
 
-
+    <div class="tic">
       <div class="row1">
         <div class="square" id=0></div>
         <div class="square" id=1></div>
@@ -41,6 +41,7 @@
         <div class="square" id=7></div>
         <div class="square" id=8></div>
       </div>
+    </div>
 
       <div id="winStatement"></div>
       <button id="reset">Reset Game</button>
