--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Tic Tac Toe</h1>
 
 
-      <p>'X'  goes first. Good luck.</p>
+      <p id="player">'X'  goes first. Good luck.</p>
 
     <div class="tic">
       <div class="row1">
