working with score counter

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <div class="container">
       <h1>Tic Tac Toe</h1>
 
+    <p>Score count <button class="scorebutton" id="scoreX">X: 0</button><button class="scorebutton" id="scoreO">O: 0</button></p>
 
-      <p id="player">'X'  goes first. Good luck.</p>
+      <p id="player">'X' to go first. </p>
 
     <div class="tic">
       <div class="row1">
@@ -44,7 +45,7 @@
     </div>
 
       <div id="winStatement"></div>
-      <button id="reset">Reset Game</button>
+      <button id="reset">Reset Board</button>
 
     </div> <!-- div container -->
 
