--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- style sheets -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 
     <!-- scripts -->
     <script type="text/javascript" src="js/logic.js"></script>
