working model v2 css

--- a/index.html
+++ b/index.html
@@ -20,27 +20,29 @@
     <div class="container">
       <h1>Tic Tac Toe</h1>
 
-    <p>Score count <button class="scorebutton" id="scoreX">X: 0</button><button class="scorebutton" id="scoreO">O: 0</button></p>
+    <p id="scoreheading">Score count</p>
+    <p class="symbol">X:<button class="scorebutton" id="scoreX">0</button>
+        O:<button class="scorebutton" id="scoreO">0</button></p>
 
       <p id="player">'X' to go first. </p>
 
     <div class="tic">
       <div class="row1">
-        <div class="square" id=0></div>
-        <div class="square" id=1></div>
-        <div class="square" id=2></div>
+        <div class="square sq0" id=0></div>
+        <div class="square sq1" id=1></div>
+        <div class="square sq2" id=2></div>
       </div>
 
       <div class="row2">
-        <div class="square" id=3></div>
-        <div class="square" id=4></div>
-        <div class="square" id=5></div>
+        <div class="square sq3" id=3></div>
+        <div class="square sq4" id=4></div>
+        <div class="square sq5" id=5></div>
       </div>
 
       <div class="row3">
-        <div class="square" id=6></div>
-        <div class="square" id=7></div>
-        <div class="square" id=8></div>
+        <div class="square sq6" id=6></div>
+        <div class="square sq7" id=7></div>
+        <div class="square sq8" id=8></div>
       </div>
     </div>
 
