added celebration confetti for winner

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/modal.css">
 
     <!-- scripts -->
     <script type="text/javascript" src="js/logic.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.2.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
+    <script type="text/javascript" src="js/modal.js"></script>
+    <script type="text/javascript" src="js/confetti.js"></script>
+
 
 
   </head>
@@ -49,6 +53,21 @@
       <button id="reset">Reset Board</button>
 
     </div> <!-- div container -->
+
+  <!-- Modal  -->
+    <!-- Trigger/Open The Modal -->
+    <!-- <button id="myBtn"></button> -->
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Some text in the Modal..</p>
+        </div>
+
+    </div>
 
   </body>
 </html>
