added help button and help page

--- a/help.html
+++ b/help.html
@@ -24,12 +24,25 @@
   </head>
   <body>
     <div class="container">
-
-      <button class="howto"><a href="help.html">How to play</a></button>
+        <div class="help">
 
       <h1>Tic Tac Toe</h1>
 
-    <p id="scoreheading">Score count</p>
+      <p>Tic Tac Toe is a game of skill. This is the ultimate battle between X and O.</p>
+      <h2>How To Play</h2>
+      <p>Find a friend. Choose who will be X and who will be O.</p>
+      <p>In the first game X goes first. The first mover alternates with each round.</p>
+      <p>If you win, there is crazy celebrations. But you can't rest on your laurels. Hit the reset button at the bottom the screen and get into the next round.</p>
+      <p>You can keep an eye on who is the ultimate champion with the score card at the top of the screen.</p>
+      <p>Frustrated that you are not winning? Not a problem. Hit refresh on your browser and you start all over again with all scores back at zero.</p>
+      <h2>How Important Is This</h2>
+      <p>Similar to the movie 'The Last Starfighter', if you are a mega champion at this (and we have algorithms to check), then one day we might select you to take on Deep Blue in a game to the death.</p>
+      <br>
+      <p>Enjoy!</p>
+
+      <button class="howto howtobottom"><a href="index.html">Get back to the game</a></button>
+
+    <!-- <p id="scoreheading">Score count</p>
     <p class="symbol">X:<button class="scorebutton" id="scoreX">0</button>
         O:<button class="scorebutton" id="scoreO">0</button></p>
 
@@ -57,17 +70,18 @@
 
       <button id="reset">Reset Board</button>
 
-    </div> <!-- div container -->
+    </div> <!- div container
 
-    <!-- The Modal -->
+    <!- The Modal
     <div id="myModal" class="modal">
 
-        <!-- Modal content -->
+        <!- Modal content
         <div class="modal-content">
           <span class="close">&times;</span>
           <p>Some text in the Modal..</p>
         </div>
-
+ -->
+     </div> <!-- end of class help div -->
     </div>
 
   </body>
