square animation and local storage for scores

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/animate.css">
 
     <!-- scripts -->
     <script type="text/javascript" src="js/logic.js"></script>
@@ -26,12 +26,13 @@
     <div class="container">
 
       <button class="howto"><a href="help.html">How to play</a></button>
+      <button class="howto" id="clear-button">Clear Scores</button>
 
       <h1>Tic Tac Toe</h1>
 
     <p id="scoreheading">Score count</p>
-    <p class="symbol">X:<button class="scorebutton" id="scoreX">0</button>
-        O:<button class="scorebutton" id="scoreO">0</button></p>
+    <p class="symbol">X:<button class="scorebutton" id="scoreX"></button>
+        O:<button class="scorebutton" id="scoreO"></button></p>
 
       <p id="player">'X' to go first. </p>
 
@@ -68,7 +69,7 @@
           <p>Some text in the Modal..</p>
         </div>
 
-    </div>
+    </div> <!-- end of Modal -->
 
   </body>
 </html>
